--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@color/black"
+                android:paddingTop="10dp"
                 android:src="@drawable/rick_and_morty_logo" />
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rwLocationList"
