--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -35,9 +35,10 @@
                 android:textColor="@color/green" />
 
             <TextView
+                android:id="@+id/twGreeting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/splash_greeting"
+
                 android:textAlignment="center"
                 android:fontFamily="@font/avenir_book"
                 android:textSize="40sp"
