--- a/app/src/main/res/layout/row_character.xml
+++ b/app/src/main/res/layout/row_character.xml
@@ -12,7 +12,10 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
         app:cardElevation="10dp"
-        android:elevation="5dp">
+        app:strokeColor="@color/green"
+        app:strokeWidth="2dp"
+        app:cardCornerRadius="10dp"
+        android:shadowColor="@color/green">
         <LinearLayout
 
             android:layout_width="match_parent"
