--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -1,22 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.fragments.CharacterDetailFragment">
+   <androidx.constraintlayout.widget.ConstraintLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+       <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="24dp"
+           android:src="@drawable/ic_baseline_arrow_back_24"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toTopOf="parent" />
 
-    </FrameLayout>
+       <TextView
+           android:id="@+id/twCharacterName"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="20dp"
+           android:textSize="24sp"
+           android:fontFamily="@font/avenir_black"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toTopOf="parent" />
+
+       <ImageView
+           android:id="@+id/iwCharacterImage"
+           android:layout_width="275dp"
+           android:layout_height="275dp"
+           android:layout_marginStart="50dp"
+           android:layout_marginTop="20dp"
+           android:layout_marginEnd="50dp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterName" />
+
+       <TextView
+           android:id="@+id/textView"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="20dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterStatusTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/iwCharacterImage" />
+
+       <TextView
+           android:id="@+id/twCharacterStatus"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="20dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/iwCharacterImage" />
+
+       <TextView
+           android:id="@+id/textView2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterSpecyTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+       <TextView
+           android:id="@+id/twCharacterSpecy"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterStatus" />
+
+       <TextView
+           android:id="@+id/textView3"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterGenderTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+       <TextView
+           android:id="@+id/twCharacterGender"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterSpecy" />
+
+       <TextView
+           android:id="@+id/textView4"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterOriginTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+       <TextView
+           android:id="@+id/twCharacterOrigin"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterGender" />
+
+       <TextView
+           android:id="@+id/textView5"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterLocationTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+       <TextView
+           android:id="@+id/twCharacterLocation"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterOrigin" />
+
+       <TextView
+           android:id="@+id/textView6"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterEpisodesTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+       <TextView
+           android:id="@+id/twCharacterEpisodes"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterLocation" />
+
+       <TextView
+           android:id="@+id/textView7"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_black"
+           android:text="@string/characterCreatedAtTitle"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+       <TextView
+           android:id="@+id/twCharacterCreatedAt"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="150dp"
+           android:layout_marginTop="5dp"
+           android:fontFamily="@font/avenir_book"
+           android:textSize="22sp"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/twCharacterEpisodes" />
+
+   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
