--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -12,6 +12,7 @@
        android:layout_height="match_parent">
 
        <ImageView
+           android:id="@+id/iwBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
@@ -60,8 +61,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iwCharacterImage" />
 
@@ -83,8 +86,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twCharacterStatus" />
 
@@ -106,8 +111,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twCharacterSpecy" />
 
@@ -129,8 +136,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twCharacterGender" />
 
@@ -152,8 +161,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twCharacterOrigin" />
 
@@ -175,8 +186,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twCharacterLocation" />
 
@@ -198,8 +211,10 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
-           android:fontFamily="@font/avenir_book"
+           android:layout_marginEnd="20dp"
+           android:fontFamily="@font/avenir_roman"
            android:textSize="22sp"
+           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twCharacterEpisodes" />
 
