--- a/app/src/main/res/layout/row_character.xml
+++ b/app/src/main/res/layout/row_character.xml
@@ -23,20 +23,28 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iwCharacterImage"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:src="@drawable/male"/>
+                android:layout_marginStart="10dp"
+                />
 
             <TextView
                 android:id="@+id/twCharacterName"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                 android:layout_height="match_parent"
-                android:text="Rick"
                 android:fontFamily="@font/avenir_black"
                 android:textSize="40sp"
                 android:gravity="center"/>
+
+            <ImageView
+                android:id="@+id/iwCharacterGender"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"/>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
