--- a/app/src/main/res/layout/row_location.xml
+++ b/app/src/main/res/layout/row_location.xml
@@ -7,7 +7,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
-
+        android:id="@+id/mcwCharacterRow"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         app:cardCornerRadius="10dp"
