--- a/app/src/main/res/layout/row_character.xml
+++ b/app/src/main/res/layout/row_character.xml
@@ -15,6 +15,7 @@
         app:strokeColor="@color/green"
         app:strokeWidth="2dp"
         app:cardCornerRadius="10dp"
+        android:backgroundTint="@color/grey"
         android:shadowColor="@color/green">
         <LinearLayout
 
@@ -36,7 +37,8 @@
                 android:layout_weight="3"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/avenir_black"
-                android:textSize="40sp"
+                android:textSize="35sp"
+                android:textColor="@color/white"
                 android:gravity="center"/>
 
             <ImageView
