--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
+            <ProgressBar
+                android:id="@+id/pbProgressBar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rwCharacterList"
                 android:layout_width="match_parent"
@@ -43,6 +48,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/rwLocationList" />
+
+
 
         </LinearLayout>
 
