--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -21,28 +21,35 @@
             <ImageView
                 android:id="@+id/iwImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="2"
                 android:src="@drawable/rick_and_morty_image" />
-
-            <TextView
-                android:id="@+id/twTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/splash_title"
-                android:textAlignment="center"
-                android:fontFamily="@font/avenir_black"
-                android:textSize="45sp"
-                android:textColor="@color/green" />
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/twTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/splash_title"
+                    android:textAlignment="center"
+                    android:fontFamily="@font/avenir_black"
+                    android:textSize="45sp"
+                    android:textColor="@color/green" />
 
-            <TextView
-                android:id="@+id/twGreeting"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/twGreeting"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-                android:textAlignment="center"
-                android:fontFamily="@font/avenir_book"
-                android:textSize="40sp"
-                android:textColor="@color/white" />
+                    android:textAlignment="center"
+                    android:fontFamily="@font/avenir_book"
+                    android:textSize="40sp"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
 
             <Button
                 android:id="@+id/btnNavigateHome"
@@ -51,6 +58,7 @@
                 android:text="@string/splash_button_text"
                 android:backgroundTint="@color/green"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="30dp"
                 android:gravity="center"
                 android:layout_gravity="center"
 
